<resources>
    <string name="app_name">OVS</string>
    <string name="welcome_back">WELCOME</string>
    <string name="username">USERNAME :</string>
    <string name="password">PASSWORD :</string>
    <string name="login">LOGIN</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT?</string>
    <string name="create_an_account_here">CREATE AN ACCOUNT HERE</string>
    <string name="fullname">FULLNAME :</string>
    <string name="email">EMAIL :</string>
    <string name="nid">NID :</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
</resources>