<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="180dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_mail"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/email"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="00dp"
                android:layout_marginRight="30dp"
                android:drawableEnd="@drawable/ic_pass"
                android:fontFamily="@font/poppinsmedium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonlogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_password"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="130dp"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_login"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonlogin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/create_a_new_account"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textAlignment="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>